fix: dark mode spinner coloring

--- a/src/app/intro/intro.page.scss
+++ b/src/app/intro/intro.page.scss
@@ -98,6 +98,10 @@ app-cached-img.unselect {
   --border: 3px solid transparent;
 }
 
+ion-spinner {
+  color: white;
+}
+
 ion-radio {
   font-family: 'Gelion Regular';
   font-size: 1.2rem;
